[package]
name = "cached_field"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Proc macro to cache associate function result on strut field. An analogy to python's @cached_property class decorator."
repository = "https://github.com/RobbieL-nlp/cached_field"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cache", "field", "macro", "property", "proc"]
categories = ["caching", "rust-patterns"]

[features]
throw=[]
carry=[]
prepend=[]
default=["throw"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "*", features = ["full"] }
